--- a/style.css
+++ b/style.css
@@ -186,3 +186,122 @@ body{
     left: 640px;
 
 }
+
+
+/*----------------------Mode 2 Styles-------------------------------------------*/
+
+.Background_mode2Screen{
+    background-image: url("Images/Background_mode_screen.jpg");
+    background-size: cover;
+    inset: 0;
+    z-index: -1;
+    position: fixed;
+}
+
+.miniplaybtn{
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    background-image: url("Images/Mini Play Button.png");
+    display: inline-block;
+    top: 500px;
+    left: 640px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+}
+
+/*---------------------------Styles for Game.html-----------------------------------------------------*/
+
+.Background_Gamescreen{
+    background-image: url("Images/8.jpg");
+    background-size: cover;
+    position: fixed;
+    inset: 0;
+    z-index: -1;
+    filter: brightness(50%);
+}
+
+.Guessbox{
+    padding: 15px 30px;
+    background-color: #D9D9D9;
+    color: #94A4B4;
+    border-radius: 24px;
+    width: 250px;
+    height: 50px;
+    position: absolute;
+    left: 50%;
+    top:20px;
+    transform: translateX(-50%) ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 4px 4px #404850;
+}
+
+.Plustable{
+    border-collapse: collapse;
+    width: 300px;
+    height: 300px;
+}
+
+.Plustable td{
+    color: #68B087;
+    width: 100px;
+    height: 100px;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 6rem;
+    font-weight: bold;
+
+}
+
+.letter {
+    width: 80px;
+    height: 80px;
+    background-color: #fff;
+    border-radius: 12px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    
+
+}
+
+.Plustable tr:first-child td:first-child {
+    border-right: 10px solid #D9D9D9;  /* middle vertical line */
+    border-bottom: 10px solid #D9D9D9; /* middle horizontal line */
+}
+
+.Plustable tr:first-child td:last-child {
+    border-left: 10px solid #D9D9D9;
+    border-bottom: 10px solid #D9D9D9;
+}
+
+.Plustable tr:last-child td:first-child {
+    border-right: 10px solid #D9D9D9;
+    border-top: 10px solid #D9D9D9;
+}
+
+.Plustable tr:last-child td:last-child {
+    border-left: 10px solid #D9D9D9;
+    border-top: 10px solid #D9D9D9;
+}
+
+.Lives {
+    position: fixed;
+    bottom: 30px;       /* distance from bottom */
+    left: 50%;          /* center horizontally */
+    transform: translateX(-50%);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', sans-serif;
+    font-size: 4rem;    /* adjust size */
+    font-weight: bold;
+    color: #68B087;     /* golden color */
+    text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
+    padding: 20px 60px;
+    z-index: 2;         /* above overlay */
+    text-align: center;
+    cursor: default;
+}
