--- a/frontend/Assets/Global.css
+++ b/frontend/Assets/Global.css
@@ -63,7 +63,7 @@
     border-radius: 24px;
     cursor: pointer;
     transition: transform 0.2s ease;
-    font-size: 1.8em;
+    font-size: 1.4em;
     z-index: 1;
     text-align: center;
     text-decoration: none;
@@ -115,4 +115,22 @@
     opacity: 1;
     transform: translateY(0);
     transition: opacity 0.8s ease, transform 0.8s ease;
+}
+
+
+@media (max-width:720px){
+    .header{
+        flex-direction: row;
+        gap: 10px;
+        align-items: center;
+    }
+
+    .footer{
+        text-align: center;
+    }
+
+    .btn{
+        font-size: 0.8rem;
+    }
+
 }
